<resources>
    <string name="app_name">Lab7</string>
    <string name="text_message">Look at my GUI</string>
    <string name="button_message">Click here</string>
    <string name="checkbox_message">Check this out!</string>
    <string name="switch_message">Switch on / off</string>
    <string name="edit_hint">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="on_msg">The switch is now on</string>
    <string name="off_msg">The switch is now off</string>

    <!--Lab3-->
    <string name="emailtext">Enter your email address:</string>
    <string name="emailedit">Type email here</string>
    <string name="pwdtext">Type your password:</string>
    <string name="loginbtn">Login</string>

    <string name="profiletext">Your profile</string>
    <string name="nametext">Your name:</string>
    <string name="nameedit">Enter your name</string>
    <string name="emailtext2">Your email:</string>
    <string name="emailedit2">Enter your email</string>
    <string name="pictext">Your picture:</string>
    <string name="pictext2">Click the button above to take a picture</string>

    <!--Lab4-->
    <string name="btnChat">Go to chat</string>
    <string name="btnSend">Send</string>
    <string name="btnReceive">Receive</string>
    <string name="chatHint">Type here</string>

    <!--Lab6-->
    <string name="btnWeather"> Weather Forecast</string>
    <string name="tvCurrent"> Current Temperature: </string>
    <string name="tvMin"> Min Temperature: </string>
    <string name="tvMax"> Max Temperature: </string>
    <string name="tvUV"> UV Rating: </string>

    <!--Lab7-->
    <string name="cbIsSend">Is a Send Message</string>
    <string name="btnHide">HIDE</string>
</resources>