<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_message"
        android:textSize="30dp"/>

    <Button
        android:id="@+id/button1"
        android:layout_below="@+id/textview1"
        android:layout_alignParentLeft="true"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_message" />

    <CheckBox
        android:id="@+id/checkbox1"
        android:layout_below="@+id/textview1"
        android:layout_toRightOf="@+id/button1"
        android:layout_alignLeft="@+id/switch1"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_message" />

    <ImageButton
        android:id="@+id/imagebutton1"
        android:layout_below="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_below="@+id/button1"
        android:layout_toRightOf="@+id/imagebutton1"
        android:layout_alignParentRight="true"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_message" />

    <EditText
        android:id="@+id/edittext1"
        android:layout_below="@+id/imagebutton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_hint"
        android:inputType="textPersonName"/>


</RelativeLayout>